1401_dejuan_Sanz_Victor_sinta/y.output
Nonterminals useless in grammar

   funcion
   parametros_funcion
   resto_parametros_funcion
   parametro_funcion
   declaraciones_funcion


Terminals unused in grammar

   TOK_MAIN
   TOK_FUNCTION
   TOK_ASIGNACION
   TOK_JUMP
   TOK_LINE_UP
   TOK_COL_UP
   TOK_ERROR
   TOK_ERROR_LONG


Rules useless in grammar

   65 funciones: funcion funciones

   66 funcion: funcion tipo identificador TOK_PARENTESISIZQUIERDO parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA

   67 parametros_funcion: parametro_funcion resto_parametros_funcion
   68                   | %empty

   69 resto_parametros_funcion: TOK_PUNTOYCOMA parametro_funcion resto_parametros_funcion
   70                         | %empty

   71 parametro_funcion: tipo identificador

   72 declaraciones_funcion: declaraciones
   73                      | %empty


State 69 conflicts: 6 shift/reduce
State 70 conflicts: 6 shift/reduce
State 91 conflicts: 6 shift/reduce
State 92 conflicts: 6 shift/reduce
State 93 conflicts: 6 shift/reduce
State 94 conflicts: 6 shift/reduce
State 95 conflicts: 6 shift/reduce
State 96 conflicts: 6 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: main TOK_LLAVEIZQUIERDA declaraciones funciones sentencias TOK_LLAVEDERECHA

    2 main: %empty

    3 declaraciones: declaracion
    4              | declaracion declaraciones

    5 declaracion: clase identificadores TOK_PUNTOYCOMA

    6 clase: clase_escalar
    7      | clase_vector

    8 clase_escalar: tipo

    9 tipo: TOK_INT
   10     | TOK_BOOLEAN

   11 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO constante_entera TOK_CORCHETEDERECHO

   12 identificadores: identificador
   13                | identificador TOK_COMA identificadores

   14 funciones: %empty

   15 sentencias: sentencia
   16           | sentencia sentencias

   17 sentencia: sentencia_simple TOK_PUNTOYCOMA
   18          | bloque

   19 sentencia_simple: asignacion
   20                 | lectura
   21                 | escritura
   22                 | retorno_funcion

   23 bloque: condicional
   24       | bucle

   25 asignacion: identificador TOK_IGUAL exp
   26           | elemento_vector TOK_IGUAL exp

   27 elemento_vector: identificador TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO

   28 condicional: TOK_IF TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA
   29            | TOK_IF TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA TOK_ELSE TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

   30 bucle: TOK_WHILE TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

   31 lectura: TOK_SCANF identificador

   32 escritura: TOK_PRINTF exp

   33 retorno_funcion: TOK_RETURN exp

   34 exp: exp TOK_MAS exp
   35    | exp TOK_MENOS exp
   36    | exp TOK_DIVISION exp
   37    | exp TOK_ASTERISCO exp
   38    | TOK_MENOS exp
   39    | exp TOK_AND exp
   40    | exp TOK_OR exp
   41    | TOK_NOT exp
   42    | identificador
   43    | constante
   44    | TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO
   45    | TOK_PARENTESISIZQUIERDO comparacion TOK_PARENTESISDERECHO
   46    | elemento_vector
   47    | identificador TOK_PARENTESISIZQUIERDO lista_expresiones TOK_PARENTESISDERECHO

   48 lista_expresiones: exp resto_lista_expresiones
   49                  | %empty

   50 resto_lista_expresiones: TOK_COMA exp resto_lista_expresiones

   51 $@1: %empty

   52 resto_lista_expresiones: $@1

   53 comparacion: exp TOK_IGUAL exp
   54            | exp TOK_DISTINTO exp
   55            | exp TOK_MENORIGUAL exp
   56            | exp TOK_MAYORIGUAL exp
   57            | exp TOK_MENOR exp
   58            | exp TOK_MAYOR exp

   59 constante: constante_logica
   60          | constante_entera

   61 constante_logica: TOK_TRUE
   62                 | TOK_FALSE

   63 constante_entera: TOK_CONSTANTE_ENTERA

   64 identificador: TOK_IDENTIFICADOR


Terminals, with rules where they appear

$end (0) 0
error (256)
TOK_MAIN (258)
TOK_INT (259) 9
TOK_BOOLEAN (260) 10
TOK_ARRAY (261) 11
TOK_FUNCTION (262)
TOK_IF (263) 28 29
TOK_ELSE (264) 29
TOK_WHILE (265) 30
TOK_SCANF (266) 31
TOK_PRINTF (267) 32
TOK_RETURN (268) 33
TOK_PUNTOYCOMA (269) 5 17
TOK_COMA (270) 13 50
TOK_PARENTESISIZQUIERDO (271) 28 29 30 44 45 47
TOK_PARENTESISDERECHO (272) 28 29 30 44 45 47
TOK_CORCHETEIZQUIERDO (273) 11 27
TOK_CORCHETEDERECHO (274) 11 27
TOK_LLAVEIZQUIERDA (275) 1 28 29 30
TOK_LLAVEDERECHA (276) 1 28 29 30
TOK_ASIGNACION (277)
TOK_MAS (278) 34
TOK_MENOS (279) 35 38
TOK_DIVISION (280) 36
TOK_ASTERISCO (281) 37
TOK_AND (282) 39
TOK_OR (283) 40
TOK_NOT (284) 41
TOK_IGUAL (285) 25 26 53
TOK_DISTINTO (286) 54
TOK_MENORIGUAL (287) 55
TOK_MAYORIGUAL (288) 56
TOK_MENOR (289) 57
TOK_MAYOR (290) 58
TOK_IDENTIFICADOR (291) 64
TOK_CONSTANTE_ENTERA (292) 63
TOK_TRUE (293) 61
TOK_FALSE (294) 62
TOK_JUMP (295)
TOK_LINE_UP (296)
TOK_COL_UP (297)
TOK_ERROR (298)
TOK_ERROR_LONG (299)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
programa (46)
    on left: 1, on right: 0
main (47)
    on left: 2, on right: 1
declaraciones (48)
    on left: 3 4, on right: 1 4
declaracion (49)
    on left: 5, on right: 3 4
clase (50)
    on left: 6 7, on right: 5
clase_escalar (51)
    on left: 8, on right: 6
tipo (52)
    on left: 9 10, on right: 8 11
clase_vector (53)
    on left: 11, on right: 7
identificadores (54)
    on left: 12 13, on right: 5 13
funciones (55)
    on left: 14, on right: 1
sentencias (56)
    on left: 15 16, on right: 1 16 28 29 30
sentencia (57)
    on left: 17 18, on right: 15 16
sentencia_simple (58)
    on left: 19 20 21 22, on right: 17
bloque (59)
    on left: 23 24, on right: 18
asignacion (60)
    on left: 25 26, on right: 19
elemento_vector (61)
    on left: 27, on right: 26 46
condicional (62)
    on left: 28 29, on right: 23
bucle (63)
    on left: 30, on right: 24
lectura (64)
    on left: 31, on right: 20
escritura (65)
    on left: 32, on right: 21
retorno_funcion (66)
    on left: 33, on right: 22
exp (67)
    on left: 34 35 36 37 38 39 40 41 42 43 44 45 46 47, on right: 25
    26 27 28 29 30 32 33 34 35 36 37 38 39 40 41 44 48 50 53 54 55
    56 57 58
lista_expresiones (68)
    on left: 48 49, on right: 47
resto_lista_expresiones (69)
    on left: 50 52, on right: 48 50
$@1 (70)
    on left: 51, on right: 52
comparacion (71)
    on left: 53 54 55 56 57 58, on right: 45
constante (72)
    on left: 59 60, on right: 43
constante_logica (73)
    on left: 61 62, on right: 59
constante_entera (74)
    on left: 63, on right: 11 60
identificador (75)
    on left: 64, on right: 12 13 25 27 31 42 47


State 0

    0 $accept: . programa $end

    $default  reduce using rule 2 (main)

    programa  go to state 1
    main      go to state 2


State 1

    0 $accept: programa . $end

    $end  shift, and go to state 3


State 2

    1 programa: main . TOK_LLAVEIZQUIERDA declaraciones funciones sentencias TOK_LLAVEDERECHA

    TOK_LLAVEIZQUIERDA  shift, and go to state 4


State 3

    0 $accept: programa $end .

    $default  accept


State 4

    1 programa: main TOK_LLAVEIZQUIERDA . declaraciones funciones sentencias TOK_LLAVEDERECHA

    TOK_INT      shift, and go to state 5
    TOK_BOOLEAN  shift, and go to state 6
    TOK_ARRAY    shift, and go to state 7

    declaraciones  go to state 8
    declaracion    go to state 9
    clase          go to state 10
    clase_escalar  go to state 11
    tipo           go to state 12
    clase_vector   go to state 13


State 5

    9 tipo: TOK_INT .

    $default  reduce using rule 9 (tipo)


State 6

   10 tipo: TOK_BOOLEAN .

    $default  reduce using rule 10 (tipo)


State 7

   11 clase_vector: TOK_ARRAY . tipo TOK_CORCHETEIZQUIERDO constante_entera TOK_CORCHETEDERECHO

    TOK_INT      shift, and go to state 5
    TOK_BOOLEAN  shift, and go to state 6

    tipo  go to state 14


State 8

    1 programa: main TOK_LLAVEIZQUIERDA declaraciones . funciones sentencias TOK_LLAVEDERECHA

    $default  reduce using rule 14 (funciones)

    funciones  go to state 15


State 9

    3 declaraciones: declaracion .
    4              | declaracion . declaraciones

    TOK_INT      shift, and go to state 5
    TOK_BOOLEAN  shift, and go to state 6
    TOK_ARRAY    shift, and go to state 7

    $default  reduce using rule 3 (declaraciones)

    declaraciones  go to state 16
    declaracion    go to state 9
    clase          go to state 10
    clase_escalar  go to state 11
    tipo           go to state 12
    clase_vector   go to state 13


State 10

    5 declaracion: clase . identificadores TOK_PUNTOYCOMA

    TOK_IDENTIFICADOR  shift, and go to state 17

    identificadores  go to state 18
    identificador    go to state 19


State 11

    6 clase: clase_escalar .

    $default  reduce using rule 6 (clase)


State 12

    8 clase_escalar: tipo .

    $default  reduce using rule 8 (clase_escalar)


State 13

    7 clase: clase_vector .

    $default  reduce using rule 7 (clase)


State 14

   11 clase_vector: TOK_ARRAY tipo . TOK_CORCHETEIZQUIERDO constante_entera TOK_CORCHETEDERECHO

    TOK_CORCHETEIZQUIERDO  shift, and go to state 20


State 15

    1 programa: main TOK_LLAVEIZQUIERDA declaraciones funciones . sentencias TOK_LLAVEDERECHA

    TOK_IF             shift, and go to state 21
    TOK_WHILE          shift, and go to state 22
    TOK_SCANF          shift, and go to state 23
    TOK_PRINTF         shift, and go to state 24
    TOK_RETURN         shift, and go to state 25
    TOK_IDENTIFICADOR  shift, and go to state 17

    sentencias        go to state 26
    sentencia         go to state 27
    sentencia_simple  go to state 28
    bloque            go to state 29
    asignacion        go to state 30
    elemento_vector   go to state 31
    condicional       go to state 32
    bucle             go to state 33
    lectura           go to state 34
    escritura         go to state 35
    retorno_funcion   go to state 36
    identificador     go to state 37


State 16

    4 declaraciones: declaracion declaraciones .

    $default  reduce using rule 4 (declaraciones)


State 17

   64 identificador: TOK_IDENTIFICADOR .

    $default  reduce using rule 64 (identificador)


State 18

    5 declaracion: clase identificadores . TOK_PUNTOYCOMA

    TOK_PUNTOYCOMA  shift, and go to state 38


State 19

   12 identificadores: identificador .
   13                | identificador . TOK_COMA identificadores

    TOK_COMA  shift, and go to state 39

    $default  reduce using rule 12 (identificadores)


State 20

   11 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO . constante_entera TOK_CORCHETEDERECHO

    TOK_CONSTANTE_ENTERA  shift, and go to state 40

    constante_entera  go to state 41


State 21

   28 condicional: TOK_IF . TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA
   29            | TOK_IF . TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA TOK_ELSE TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_PARENTESISIZQUIERDO  shift, and go to state 42


State 22

   30 bucle: TOK_WHILE . TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_PARENTESISIZQUIERDO  shift, and go to state 43


State 23

   31 lectura: TOK_SCANF . identificador

    TOK_IDENTIFICADOR  shift, and go to state 17

    identificador  go to state 44


State 24

   32 escritura: TOK_PRINTF . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 45
    TOK_MENOS                shift, and go to state 46
    TOK_NOT                  shift, and go to state 47
    TOK_IDENTIFICADOR        shift, and go to state 17
    TOK_CONSTANTE_ENTERA     shift, and go to state 40
    TOK_TRUE                 shift, and go to state 48
    TOK_FALSE                shift, and go to state 49

    elemento_vector   go to state 50
    exp               go to state 51
    constante         go to state 52
    constante_logica  go to state 53
    constante_entera  go to state 54
    identificador     go to state 55


State 25

   33 retorno_funcion: TOK_RETURN . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 45
    TOK_MENOS                shift, and go to state 46
    TOK_NOT                  shift, and go to state 47
    TOK_IDENTIFICADOR        shift, and go to state 17
    TOK_CONSTANTE_ENTERA     shift, and go to state 40
    TOK_TRUE                 shift, and go to state 48
    TOK_FALSE                shift, and go to state 49

    elemento_vector   go to state 50
    exp               go to state 56
    constante         go to state 52
    constante_logica  go to state 53
    constante_entera  go to state 54
    identificador     go to state 55


State 26

    1 programa: main TOK_LLAVEIZQUIERDA declaraciones funciones sentencias . TOK_LLAVEDERECHA

    TOK_LLAVEDERECHA  shift, and go to state 57


State 27

   15 sentencias: sentencia .
   16           | sentencia . sentencias

    TOK_IF             shift, and go to state 21
    TOK_WHILE          shift, and go to state 22
    TOK_SCANF          shift, and go to state 23
    TOK_PRINTF         shift, and go to state 24
    TOK_RETURN         shift, and go to state 25
    TOK_IDENTIFICADOR  shift, and go to state 17

    $default  reduce using rule 15 (sentencias)

    sentencias        go to state 58
    sentencia         go to state 27
    sentencia_simple  go to state 28
    bloque            go to state 29
    asignacion        go to state 30
    elemento_vector   go to state 31
    condicional       go to state 32
    bucle             go to state 33
    lectura           go to state 34
    escritura         go to state 35
    retorno_funcion   go to state 36
    identificador     go to state 37


State 28

   17 sentencia: sentencia_simple . TOK_PUNTOYCOMA

    TOK_PUNTOYCOMA  shift, and go to state 59


State 29

   18 sentencia: bloque .

    $default  reduce using rule 18 (sentencia)


State 30

   19 sentencia_simple: asignacion .

    $default  reduce using rule 19 (sentencia_simple)


State 31

   26 asignacion: elemento_vector . TOK_IGUAL exp

    TOK_IGUAL  shift, and go to state 60


State 32

   23 bloque: condicional .

    $default  reduce using rule 23 (bloque)


State 33

   24 bloque: bucle .

    $default  reduce using rule 24 (bloque)


State 34

   20 sentencia_simple: lectura .

    $default  reduce using rule 20 (sentencia_simple)


State 35

   21 sentencia_simple: escritura .

    $default  reduce using rule 21 (sentencia_simple)


State 36

   22 sentencia_simple: retorno_funcion .

    $default  reduce using rule 22 (sentencia_simple)


State 37

   25 asignacion: identificador . TOK_IGUAL exp
   27 elemento_vector: identificador . TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO

    TOK_CORCHETEIZQUIERDO  shift, and go to state 61
    TOK_IGUAL              shift, and go to state 62


State 38

    5 declaracion: clase identificadores TOK_PUNTOYCOMA .

    $default  reduce using rule 5 (declaracion)


State 39

   13 identificadores: identificador TOK_COMA . identificadores

    TOK_IDENTIFICADOR  shift, and go to state 17

    identificadores  go to state 63
    identificador    go to state 19


State 40

   63 constante_entera: TOK_CONSTANTE_ENTERA .

    $default  reduce using rule 63 (constante_entera)


State 41

   11 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO constante_entera . TOK_CORCHETEDERECHO

    TOK_CORCHETEDERECHO  shift, and go to state 64


State 42

   28 condicional: TOK_IF TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA
   29            | TOK_IF TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA TOK_ELSE TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_PARENTESISIZQUIERDO  shift, and go to state 45
    TOK_MENOS                shift, and go to state 46
    TOK_NOT                  shift, and go to state 47
    TOK_IDENTIFICADOR        shift, and go to state 17
    TOK_CONSTANTE_ENTERA     shift, and go to state 40
    TOK_TRUE                 shift, and go to state 48
    TOK_FALSE                shift, and go to state 49

    elemento_vector   go to state 50
    exp               go to state 65
    constante         go to state 52
    constante_logica  go to state 53
    constante_entera  go to state 54
    identificador     go to state 55


State 43

   30 bucle: TOK_WHILE TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_PARENTESISIZQUIERDO  shift, and go to state 45
    TOK_MENOS                shift, and go to state 46
    TOK_NOT                  shift, and go to state 47
    TOK_IDENTIFICADOR        shift, and go to state 17
    TOK_CONSTANTE_ENTERA     shift, and go to state 40
    TOK_TRUE                 shift, and go to state 48
    TOK_FALSE                shift, and go to state 49

    elemento_vector   go to state 50
    exp               go to state 66
    constante         go to state 52
    constante_logica  go to state 53
    constante_entera  go to state 54
    identificador     go to state 55


State 44

   31 lectura: TOK_SCANF identificador .

    $default  reduce using rule 31 (lectura)


State 45

   44 exp: TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO
   45    | TOK_PARENTESISIZQUIERDO . comparacion TOK_PARENTESISDERECHO

    TOK_PARENTESISIZQUIERDO  shift, and go to state 45
    TOK_MENOS                shift, and go to state 46
    TOK_NOT                  shift, and go to state 47
    TOK_IDENTIFICADOR        shift, and go to state 17
    TOK_CONSTANTE_ENTERA     shift, and go to state 40
    TOK_TRUE                 shift, and go to state 48
    TOK_FALSE                shift, and go to state 49

    elemento_vector   go to state 50
    exp               go to state 67
    comparacion       go to state 68
    constante         go to state 52
    constante_logica  go to state 53
    constante_entera  go to state 54
    identificador     go to state 55


State 46

   38 exp: TOK_MENOS . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 45
    TOK_MENOS                shift, and go to state 46
    TOK_NOT                  shift, and go to state 47
    TOK_IDENTIFICADOR        shift, and go to state 17
    TOK_CONSTANTE_ENTERA     shift, and go to state 40
    TOK_TRUE                 shift, and go to state 48
    TOK_FALSE                shift, and go to state 49

    elemento_vector   go to state 50
    exp               go to state 69
    constante         go to state 52
    constante_logica  go to state 53
    constante_entera  go to state 54
    identificador     go to state 55


State 47

   41 exp: TOK_NOT . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 45
    TOK_MENOS                shift, and go to state 46
    TOK_NOT                  shift, and go to state 47
    TOK_IDENTIFICADOR        shift, and go to state 17
    TOK_CONSTANTE_ENTERA     shift, and go to state 40
    TOK_TRUE                 shift, and go to state 48
    TOK_FALSE                shift, and go to state 49

    elemento_vector   go to state 50
    exp               go to state 70
    constante         go to state 52
    constante_logica  go to state 53
    constante_entera  go to state 54
    identificador     go to state 55


State 48

   61 constante_logica: TOK_TRUE .

    $default  reduce using rule 61 (constante_logica)


State 49

   62 constante_logica: TOK_FALSE .

    $default  reduce using rule 62 (constante_logica)


State 50

   46 exp: elemento_vector .

    $default  reduce using rule 46 (exp)


State 51

   32 escritura: TOK_PRINTF exp .
   34 exp: exp . TOK_MAS exp
   35    | exp . TOK_MENOS exp
   36    | exp . TOK_DIVISION exp
   37    | exp . TOK_ASTERISCO exp
   39    | exp . TOK_AND exp
   40    | exp . TOK_OR exp

    TOK_MAS        shift, and go to state 71
    TOK_MENOS      shift, and go to state 72
    TOK_DIVISION   shift, and go to state 73
    TOK_ASTERISCO  shift, and go to state 74
    TOK_AND        shift, and go to state 75
    TOK_OR         shift, and go to state 76

    $default  reduce using rule 32 (escritura)


State 52

   43 exp: constante .

    $default  reduce using rule 43 (exp)


State 53

   59 constante: constante_logica .

    $default  reduce using rule 59 (constante)


State 54

   60 constante: constante_entera .

    $default  reduce using rule 60 (constante)


State 55

   27 elemento_vector: identificador . TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO
   42 exp: identificador .
   47    | identificador . TOK_PARENTESISIZQUIERDO lista_expresiones TOK_PARENTESISDERECHO

    TOK_PARENTESISIZQUIERDO  shift, and go to state 77
    TOK_CORCHETEIZQUIERDO    shift, and go to state 61

    $default  reduce using rule 42 (exp)


State 56

   33 retorno_funcion: TOK_RETURN exp .
   34 exp: exp . TOK_MAS exp
   35    | exp . TOK_MENOS exp
   36    | exp . TOK_DIVISION exp
   37    | exp . TOK_ASTERISCO exp
   39    | exp . TOK_AND exp
   40    | exp . TOK_OR exp
